--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,9 +14,9 @@ services:
       python manage.py migrate &&
       python manage.py runserver 0.0.0.0:8000"
     depends_on:
-      - db
+      - railway_db
 
-  db:
+  railway_db:
     image: postgres:16.0-alpine3.17
     restart: always
     env_file:
